styles/sass/components/ContactSection.module.scss
$peach: hsl(11, 73%, 66%);
.ContactSection {
	padding-bottom: 7rem;
	position: relative;
	z-index: 45;
	@media screen and (min-width: 768px) {
		margin: 0 2.4375rem;
		padding-bottom: 0;
	}

	&__main {
		position: relative;
		background-color: $peach;
		overflow: hidden;

		@media screen and (min-width: 768px) {
			border-radius: 10px;
		}

		// &::before {
		// 	content: '';
		// 	position: absolute;
		// 	width: 292px;
		// 	height: 292px;
		// 	bottom: -28%;
		// 	left: 55%;
		// 	background-image: url('../../../public/assets/shared/desktop/bg-pattern-small-circle.svg');
		// 	background-repeat: no-repeat;
		// 	background-size: 100%;
		// 	overflow: hidden;
		// 	z-index: 40;

		// 	// @media screen and (min-width: 768px) {
		// 	// 	top: 0;
		// 	// 	left: 0;
		// 	// 	background-size: 200%;
		// 	// }
		// }
	}
}

